# 2_sem_1_project

./: Army_builder.hpp  Building.hpp  CMakeLists.txt  Enemy.hpp  Factory_Of_Dwarves.hpp  Factory_Of_Elf.hpp  Factory_Of_Men.hpp  Observe.hpp  README.md  Unit_Of_Dwarve.h  Unit_Of_Elf.h  Unit_Of_Men.h  change_complexity.hpp  composite_unit.hpp  const_value_complexity_1.h  const_value_complexity_2.h  const_value_complexity_3.h  game_map.hpp  my_hero.hpp  play_game.cpp  test_composite.cpp  tools_for_army.hpp
